--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <center>
   <div class="corpodonome"> 
-  <div class="nomepag"> < Rafael Albuquerque /> </div>
+  <div class="nomepag"> SITE DO RAFAEL</div>
 </div>
 </center>
     <nav id="menu">
@@ -28,7 +28,7 @@
     </nav>
 
     <div class="corpodosite">
-<h1>Bem vindo</h1>
+<h1></h1>
 
     </div>
 
