Imagens para o carrosel e corrigindo erros do css

--- a/esportes.html
+++ b/esportes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafael Albuquerque</title>
+    <title>SITE RAFAEL</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 
@@ -31,9 +31,9 @@
 
     <div class="corpodosite">
     
-    
-       <b> <h1 class="sb">Esportes</h1> </b>
-
+    <center>
+       <b> <h1 class="sbe">Esportes</h1> </b>
+    </center>
 
     </div>
 
