--- a/games.html
+++ b/games.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafael Albuquerque</title>
+    <title>SITE RAFAEL</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 
@@ -33,7 +33,7 @@
     <div class="corpodosite">
     
     <center>
-       <b> <h1 class="sb">Jogos preferidos</h1> </b>
+       <b> <h1 class="sbg">Jogos preferidos</h1> </b>
     </center>
 
     </div>
