Finalizado a pag if

--- a/if.html
+++ b/if.html
@@ -36,8 +36,9 @@
         <center>
             <b> <h1 class="sbi">IF</h1> </b>
          </center>
-     
-
+     <center>
+         <h3 class="textoif">Estou no 6 º semestre do curso de técnico em informática do IFMS campus Nova Andradina.</h3>
+        </center>
     </div>
 
     <footer class='footer'>
