--- a/games.html
+++ b/games.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SITE RAFAEL</title>
     <link rel="stylesheet" href="estilo.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -35,6 +36,35 @@
     <center>
        <b> <h1 class="sbg">Jogos preferidos</h1> </b>
     </center>
+
+
+
+    <section class="slider">
+        <input hidden id="t1" name='slide' type="radio" checked>
+        <input hidden id="t2" name='slide' type="radio" >
+        <input hidden id="t3" name='slide' type="radio">
+     
+        <div class="slider-content">
+            <div class="slider-item">
+                <h1>REDDEAD</h1>
+                <img class="rd" src="img/reddead.jpg">
+                <p class="legenda">Jogo de mundo aberto.</p>
+            </div>
+            <div class="slider-item">
+                <h1>WARZONE</h1>
+                <img  class="wz" src="img/warzone-header.jpg">
+                <p class="legenda">Bom jogo</p>
+            </div>
+            <div class="slider-item">
+                <h1>THE LAST</h1>
+                <img class="the" src="img/the.jpg">
+                <p class="legenda">Bom jogo</p>
+            </div>
+        </div>
+    </section>
+
+
+
 
     </div>
 
