Adicionado o carrosel dos esportes

--- a/esportes.html
+++ b/esportes.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SITE RAFAEL</title>
     <link rel="stylesheet" href="estilo.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -34,6 +35,35 @@
     <center>
        <b> <h1 class="sbe">Esportes</h1> </b>
     </center>
+
+    <section class="slider">
+        <input hidden id="t1" name='slide' type="radio" checked>
+        <input hidden id="t2" name='slide' type="radio" >
+        <input hidden id="t3" name='slide' type="radio">
+     
+        <div class="slider-content">
+            <div class="slider-item">
+                <h1>SANTOS FC</h1>
+                <img class="rd" src="img/santos.png">
+                <p class="legenda">Torço para o Santos fc</p>
+            </div>
+            <div class="slider-item">
+                <h1>REAL MADRID</h1>
+                <img  class="wz" src="img/real.png">
+                <p class="legenda">Torço para o REAL MADRID</p>
+            </div>
+            <div class="slider-item">
+                <h1>Vôlei</h1>
+                <img class="the" src="img/volei.jpg">
+                <p class="legenda">Gosto de jogar vôlei</p>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
 
     </div>
 
